# delivery

./: .env  .gitignore  Cargo.toml  docker-compose.yml
sql/: 000_init.sql  001_create_table_menu.sql  002_seed_menus.sql  003_location.sql
src/: lib.rs  menu.rs  observability.rs  prelude.rs  restaurant_search.rs
templates/: menu.html  restaurants.html
